--- a/src/HelloMurder/resources/game_config.json
+++ b/src/HelloMurder/resources/game_config.json
@@ -4,6 +4,7 @@
   "ContentAsepritePath": "aseprite/",
   "FontPath": "shaders/",
   "SoundsPath": "sounds/",
+  "DialoguesPath": "dialogues/",
   "ShadersPath": "shaders/",
   "HiResPath": "hires_images/",
   "AssetResourcesPath": "assets/",
@@ -11,15 +12,14 @@
   "GenericAssetsPath": "data/",
   "GameWidth": 320,
   "GameHeight": 180,
-  "GameScale": 3,
-  "RenderDownscale": 2,
+  "GameScale": 2,
   "Fullscreen": false,
   "TargetFps": 60,
   "FixedUpdateFactor": 2.0,
   "IsVSyncEnabled": false,
   "ShowUiDebug": true,
   "PushAwayInterval": 0.05,
-  "StartingScene": "3bd26720-c3b1-44c1-b7c3-192d5656cc37",
+  "StartingScene": "e09343c5-19b5-419d-88f4-f06ed35a4752",
   "Theme": {
     "$type": "Murder.Assets.Theme, Murder",
     "Bg": {
@@ -133,15 +133,73 @@
     "Hand": "fc4818c5-bbb0-83b5-0b56-9c0b08cf7d12",
     "Eye": "52826fff-e1a5-54a7-89c2-fb8996da272f",
     "CutsceneImage": "9cc41c2e-7a73-844e-8146-1c6dacfc1db9",
-    "AnchorImage": "cc2d6ddd-9d67-b912-430a-9787bab45b33"
+    "AnchorImage": "cc2d6ddd-9d67-b912-430a-9787bab45b33",
+    "BoxBg": {
+      "$type": "Murder.Core.Graphics.NineSliceInfo, Murder",
+      "Core": {
+        "$type": "Murder.Core.Geometry.Rectangle, Murder",
+        "X": 0.0,
+        "Y": 0.0,
+        "Width": 0.0,
+        "Height": 0.0
+      },
+      "Image": "e58ce1db-62a9-53fb-f78d-50b702b5d0bf"
+    },
+    "BoxBgHovered": {
+      "$type": "Murder.Core.Graphics.NineSliceInfo, Murder",
+      "Core": {
+        "$type": "Murder.Core.Geometry.Rectangle, Murder",
+        "X": 0.0,
+        "Y": 0.0,
+        "Width": 0.0,
+        "Height": 0.0
+      },
+      "Image": "6a647e1f-4940-5a06-a4c1-bd16ff1216ca"
+    },
+    "BoxBgSelected": {
+      "$type": "Murder.Core.Graphics.NineSliceInfo, Murder",
+      "Core": {
+        "$type": "Murder.Core.Geometry.Rectangle, Murder",
+        "X": 0.0,
+        "Y": 0.0,
+        "Width": 0.0,
+        "Height": 0.0
+      },
+      "Image": "166732e0-d5db-5f97-d853-41b4acec58de"
+    },
+    "BoxBgGrayed": {
+      "$type": "Murder.Core.Graphics.NineSliceInfo, Murder",
+      "Core": {
+        "$type": "Murder.Core.Geometry.Rectangle, Murder",
+        "X": 0.0,
+        "Y": 0.0,
+        "Width": 0.0,
+        "Height": 0.0
+      },
+      "Image": "15ab60cf-58b0-3167-75f6-44f5fd2e9b5d"
+    },
+    "DialogueIconHello": "daf91d39-f280-4c83-f2ac-cef2f8c16dc8",
+    "DialogueIconExit": "f55bdadc-8f2b-65d5-f9b1-5975d0b14f48",
+    "DialogueIconBaloon": "e1e30903-b346-cd23-a4b1-4c87e091cfae",
+    "DialogueIconAction": "fa6c06b0-c493-d9a2-976d-aaa945e699e4",
+    "DialogueIconFlow": "ddc15cae-7e6e-33c5-6713-188799cf63bb",
+    "DialogueIconEdgeNext": "96cab105-ef05-7da9-0ca9-a4781aee3f20",
+    "DialogueIconEdgeRandom": "8adcbd0a-9cca-e2f1-f2dc-cb0d4db2acba",
+    "DialogueIconEdgeScore": "e46c489e-4242-72c9-d518-44ab96591d15",
+    "DialogueIconEdgeChoice": "0f5036f0-4db3-4c4d-4b8f-16cc2ea995e7",
+    "DialogueIconEdgeIf": "a8d14412-3b6a-f782-a94c-0acaf695e288",
+    "DialogueBtnPlay": "2264b5ce-f60e-fff6-27f4-1955dd00b5a4",
+    "DialogueBtnStepBack": "acdd67d5-64da-333f-f96c-dfadf9857dce",
+    "DialogueBtnStepForward": "bbbaf440-1261-2598-8af2-b8d0e9e6922e"
   },
   "BackColor": {
-    "$type": "Microsoft.Xna.Framework.Color, MonoGame.Framework",
-    "B": 0,
-    "G": 0,
-    "R": 0,
-    "A": 255
+    "$type": "Murder.Core.Graphics.Color, Murder",
+    "R": 0.07041586,
+    "G": 0.07185418,
+    "B": 0.0869565,
+    "A": 1.0
   },
+  "DefaultPalette": "images\\murder_palette",
   "Name": "Game Profile",
-  "Guid": "aca7ee25-239b-488f-83ee-11101e80cbfe"
+  "Guid": "b6accbfd-4c82-4918-83ae-733add7bcae7"
 }
