--- a/src/HelloMurder/HelloMurder.csproj
+++ b/src/HelloMurder/HelloMurder.csproj
@@ -16,8 +16,10 @@
     <Content Include="resources\**" CopyToOutputDirectory="PreserveNewest" LinkBase="resources" />
     <Content Include="packed\**" CopyToOutputDirectory="PreserveNewest" TargetPath="resources\%(RecursiveDir)\%(Filename)%(Extension)" />
   </ItemGroup>
+
   <ItemGroup>
-    <None Remove="resources\app.manifest" />
+    <None Remove="resources\Icon.bmp" />
+    <None Remove="resources\Icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,18 +35,10 @@
     <ProjectReference Include="..\..\murder\src\Murder\Murder.csproj" />
   </ItemGroup>
 
-  <!-- Generator files -->
-  <ItemGroup>
-    <None Condition="'$(Configuration)' == 'Debug' And '$(Generated)' == 'true' And '$(SkipGenerator)' != true" Include="Generated\.components">
-      <TargetPath>%(Filename)%(Extension)</TargetPath>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-
   <!-- Generate files! -->
   <Target Name="GenerateFiles" AfterTargets="PostBuildEvent" Condition="'$(Generated)' != 'true' And '$(Configuration)' == 'Debug' And '$(SkipGenerator)' != true">
-    <Exec Command="$(OutputPath)Generator -buildWithBinaries $(MSBuildProjectDirectory) $(MSBuildProjectDirectory)\$(OutDir) $(AssemblyName)" Condition="'$(OS)' != 'WINDOWS_NT'" />
-    <Exec Command="$(OutputPath)Generator.exe -buildWithBinaries $(MSBuildProjectDirectory) $(MSBuildProjectDirectory)\$(OutDir) $(AssemblyName)" Condition="'$(OS)' == 'WINDOWS_NT'" />
+    <Exec Command="$(OutputPath)Generator -buildWithBinaries '$(MSBuildProjectDirectory)' '$(MSBuildProjectDirectory)\$(OutDir)' $(AssemblyName)" Condition="'$(OS)' != 'WINDOWS_NT'" />
+    <Exec Command="$(OutputPath)Generator.exe -buildWithBinaries '$(MSBuildProjectDirectory)' '$(MSBuildProjectDirectory)\$(OutDir)' $(AssemblyName)" Condition="'$(OS)' == 'WINDOWS_NT'" />
 
     <!-- After generating these files, build the project again with the generated specs. -->
     <MSBuild Projects="$(MSBuildProjectFile)" Properties="Generated=true" />
