--- a/src/HelloMurder/HelloMurder.csproj
+++ b/src/HelloMurder/HelloMurder.csproj
@@ -35,13 +35,17 @@
     <ProjectReference Include="..\..\murder\src\Murder\Murder.csproj" />
   </ItemGroup>
 
-  <!-- Generate files! -->
-  <Target Name="GenerateFiles" AfterTargets="PostBuildEvent" Condition="'$(Generated)' != 'true' And '$(Configuration)' == 'Debug' And '$(SkipGenerator)' != true">
-    <Exec Command="$(OutputPath)Generator -buildWithBinaries '$(MSBuildProjectDirectory)' '$(MSBuildProjectDirectory)\$(OutDir)' $(AssemblyName)" Condition="'$(OS)' != 'WINDOWS_NT'" />
-    <Exec Command="$(OutputPath)Generator.exe -buildWithBinaries '$(MSBuildProjectDirectory)' '$(MSBuildProjectDirectory)\$(OutDir)' $(AssemblyName)" Condition="'$(OS)' == 'WINDOWS_NT'" />
+  <!-- Bang analyzers and generators! -->
+  <ItemGroup>
+    <ProjectReference Include="..\..\murder\bang\src\Bang.Analyzers\Bang.Analyzers.csproj">
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+      <OutputItemType>Analyzer</OutputItemType>
+    </ProjectReference>
 
-    <!-- After generating these files, build the project again with the generated specs. -->
-    <MSBuild Projects="$(MSBuildProjectFile)" Properties="Generated=true" />
-  </Target>
+    <ProjectReference Include="..\..\murder\bang\src\Bang.Generator\Bang.Generator.csproj">
+      <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
+      <OutputItemType>Analyzer</OutputItemType>
+    </ProjectReference>
+  </ItemGroup>
 
 </Project>
