--- a/src/HelloMurder/HelloMurder.csproj
+++ b/src/HelloMurder/HelloMurder.csproj
@@ -9,6 +9,10 @@
 
     <!-- Investigate if we need this -->
     <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
+
+    <!-- Workaround for hot reload breaking due to AssemblyAttribute. 
+    See https://github.com/dotnet/sdk/issues/36666 -->
+    <EnableSourceControlManagerQueries>false</EnableSourceControlManagerQueries>
   </PropertyGroup>
   
   <!-- Resources -->
@@ -64,11 +68,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="loc\LocalizedResources.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>LocalizedResources.resx</DependentUpon>
-    </Compile>
+    <Folder Include="resources\assets\data\Localization\" />
   </ItemGroup>
 
 </Project>
